Working version 1.5 - geofencing added + bug fixes, major adapter inconsistency bug still yet to fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +20,14 @@
         android:roundIcon="@mipmap/app_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tracker1">
+        <receiver
+            android:name=".Service.GeofenceBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
 
+        <activity
+            android:name=".TokenActivity"
+            android:exported="false" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -38,7 +47,7 @@
         <activity
             android:name=".BuddyRequestActivity"
             android:exported="false"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
 
         <service
             android:name=".Service.MyFCMService"
@@ -48,12 +57,12 @@
             </intent-filter>
         </service>
 
-        <receiver android:name=".Service.MyLocationReceiver"/>
+        <receiver android:name=".Service.MyLocationReceiver" />
 
         <activity
             android:name=".AllPeopleActivity"
             android:exported="false"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".HomeActivity"
             android:exported="false"
