--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_logo"
@@ -24,6 +25,7 @@
             android:name=".Service.GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true"></receiver>
+        <receiver android:name=".Util.AlarmReceiver"/>
 
         <activity
             android:name=".TokenActivity"
